# progress-tracker

./: .claudeignore  .gitattributes  .gitignore  LICENSE
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260502_create_user_table.py  20260503_add_is_active_and_updated_at_to_user.py  20260504_create_client_table.py  (+3 more)
backend/app/: __init__.py  main.py
backend/scripts/: audit_auth_imports.sh  audit_clients_imports.sh  audit_jose_imports.sh  audit_payments_imports.sh  audit_projects_imports.sh  audit_reporting_imports.sh  audit_users_imports.sh
backend/tests/: _payments_helpers.py  _projects_helpers.py  _reporting_helpers.py  conftest.py  test_auth_login.py  test_auth_me.py  test_auth_protected_sweep.py  test_auth_register.py  test_auth_role_guards.py  test_clients_create.py  test_clients_delete.py  test_clients_read.py  test_clients_uniqueness.py  test_clients_update.py  test_modules_crud.py  test_modules_progress.py  test_payments_developer_me.py  test_payments_generate.py  test_payments_read.py  test_payments_status.py  test_payments_summary.py  test_projects_create.py  test_projects_progress.py  test_projects_read.py  test_projects_update.py  test_reporting_audit.py  test_reporting_dashboard.py  test_reporting_developer_me.py  test_reporting_developers.py  test_reporting_financial.py  test_reporting_projects.py  test_users_developers.py  test_users_last_admin_guard.py  test_users_me.py  test_users_no_password_hash_leak.py  test_users_read.py  test_users_status.py  test_users_update.py
frontend/: .gitignore  (+5 more)
(+298 files in other folders)
